--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Flying Horse Impex</h1>
+            <h1 style:"color:black">Flying Horse Impex</h1>
             <hr>
-            <p>Curated Designer Home Furnishings.<br>Quilts, Curtains, Bedsheets & more... </p>
+            <p style:"color:black">Curated Designer Home Furnishings.<br>Quilts, Curtains, Bedsheets & more... </p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
