--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">Available Now !</h2>
                 <hr class="light">
                 <p class="text-faded">Order yours at Amazon</p>
-                <a href="#" class="btn btn-default btn-xl">Buy</a>
+                <a href="https://www.amazon.in/s/ref=bl_dp_s_web_0?ie=UTF8&search-alias=aps&field-keywords=richenza" class="btn btn-default btn-xl">Buy</a>
             </div>
         </div>
     </div>
