--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -9,9 +9,9 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
@@ -24,9 +24,10 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
@@ -39,9 +40,10 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
@@ -54,9 +56,10 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
@@ -69,9 +72,10 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
@@ -84,9 +88,10 @@
                             <div class="project-category text-faded">
                                 Category
                             </div>
-                            <div class="project-name">
+
+<!--                            <div class="project-name">
                                 Project Name
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </a>
